2023-09-22T16:11:42Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6276600318 # 1920
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-22
* notice: last 14d: unq all: 14 73
* notice: prev accum: outdated-unq outdated-all / unq all: 593 1702 / 608 1776
* notice: next accum: outdated-unq outdated-all / unq all: 594 1703 / 608 1776
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-09-08] / []

2023-09-21T16:11:17Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6264272795 # 1917
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-21
* notice: last 14d: unq all: 15 74
* notice: prev accum: outdated-unq outdated-all / unq all: 592 1698 / 608 1776
* notice: next accum: outdated-unq outdated-all / unq all: 593 1702 / 608 1776
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-09-07] / []

2023-09-21T00:41:41Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6255684670 # 1915
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-21
* notice: last 14d: unq all: 16 78
* notice: prev accum: outdated-unq outdated-all / unq all: 592 1698 / 607 1764
* notice: next accum: outdated-unq outdated-all / unq all: 592 1698 / 608 1776
* notice: prev exec diff / last date diff / accum: unq all: +1 +12 -0 -0 / +2 +22 -0 -0 / 2 22
* notice: removed / changed dates: [] / [2023-09-20]

2023-09-20T16:11:51Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6251274689 # 1914