@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-09-22T16:11:42Z",
+  "timestamp" : "2023-09-24T00:44:09Z",
   "count_outdated" : 1703,
   "uniques_outdated" : 594,
-  "count" : 1776,
-  "uniques" : 608,
+  "count" : 1777,
+  "uniques" : 609,
   "views" : [
     {
       "timestamp": "2023-09-10T00:00:00Z",
@@ -76,6 +76,15 @@
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2023-09-23T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
