@@ -1,6 +1,6 @@
 {
-  "count": 73,
-  "uniques": 14,
+  "count": 74,
+  "uniques": 15,
   "views": [
     {
       "timestamp": "2023-09-10T00:00:00Z",
@@ -41,6 +41,11 @@
       "timestamp": "2023-09-20T00:00:00Z",
       "count": 22,
       "uniques": 2
+    },
+    {
+      "timestamp": "2023-09-23T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
