@@ -1,3 +1,12 @@
+2023-09-24T00:44:09Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6286959151 # 1924
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-24
+* notice: last 14d: unq all: 15 74
+* notice: prev accum: outdated-unq outdated-all / unq all: 594 1703 / 608 1776
+* notice: next accum: outdated-unq outdated-all / unq all: 594 1703 / 609 1777
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-09-23]
+
 2023-09-22T16:11:42Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6276600318 # 1920
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-22
